--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "react": "^19.1.1",
@@ -18,6 +20,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
